# BaiTTS-CLI-Web

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GEMINI_MEMORY.md  README.md  docker-entrypoint.sh
book/: test.txt
data/: baitts_tasks.json
examples/: debug_extract.rs  《九鼎记》（精校文字全本） (我吃西红柿) (Z-Library).epub  红城堡 -渡边淳一 .azw3
output/test/: 1_test.lrc
src/: api.rs  args.rs  extractor.rs  lrc.rs  main.rs  process.rs  server.rs  utils.rs
src/static/: index.html
