[package]
name = "baitts-cli-rs"
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
indicatif = "0.17"
hound = "3.5"
regex = "1.10"
tempfile = "3.8"
epub = "2.1.5"
html2text = "0.12.6"
chardet = "0.2"
encoding_rs = "0.8"
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
open = "5.0"
once_cell = "1.19"
url = "2.5"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
walkdir = "2"
id3 = "1.0"
md5 = "0.7"
mime_guess = "2.0"